# wdae

./: .editorconfig  .travis.yml  CMakeLists.txt  VBoxCAPI_v5_1-fixcase.patch  com_manager.hpp  disks.cpp  disks.hpp  explain.cpp  explain.hpp  main_window.cpp  main_window.hpp  prev.hpp  wdae-rc.rc  wdae.cpp  wdae.manifest
